# UOMap

./: README.md
UOMap/: CMakeLists.txt  main.cpp
UOMap.xcodeproj/: project.pbxproj
UOMap.xcodeproj/xcuserdata/charleskerr.xcuserdatad/xcschemes/: xcschememanagement.plist
UOMap/uodata/: CMakeLists.txt  uomap.cpp  uomap.hpp  uopfile.cpp  uopfile.hpp
UOMap/utility/: CMakeLists.txt
vs2022/: UOMap.rc  UOMap.sln  UOMap.vcxproj  UOMap.vcxproj.filters  resource.h
